force-app/main/default/objects/Cluster_Issue__c/Cluster_Issue__c.object-meta.xml
<CustomObject>
    <description>This object (previously known as Cluster Issue) stores the data for issues related to the clusters when the capacity is about to reach 100% or there are some failing jobs</description>
    <label>Customer Proactive Response</label>
    <nameField>
        <displayFormat>CPR-{0000000000}</displayFormat>
        <label>Issue Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Proactive Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>