force-app/main/default/objects/Cluster_Issue__c/fields/Capacity_Days_Until_100__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Days_Until_100__c</fullName>
    <formula>Cluster__r.Capacity_Days_Until_100__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity Days Until 100%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>