force-app/main/default/objects/Cluster_Issue__c/fields/Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Case_Resolution__c</fullName>
    <formula>TEXT(Case__r.Resolution__c)</formula>
    <label>Case Resolution</label>
    <type>Text</type>
</CustomField>