force-app/main/default/objects/Cluster_Issue__c/fields/Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Reason__c</fullName>
    <label>Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case created</fullName>
            </value>
            <value>
                <fullName>Opportunity created</fullName>
            </value>
            <value>
                <fullName>Existing Opportunity</fullName>
            </value>
            <value>
                <fullName>Customer Resolved</fullName>
            </value>
            <value>
                <fullName>Incorrect Forecast data</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>