force-app/main/default/objects/Cluster_Issue__c/fields/CPR_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>CPR_Close_Date__c</fullName>
    <label>Close Date</label>
    <type>DateTime</type>
</CustomField>