force-app/main/default/objects/Cluster_Issue__c/fields/Last_Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Notification_Date_Time__c</fullName>
    <defaultValue>Now()</defaultValue>
    <label>Last Notification Date/Time</label>
    <type>DateTime</type>
</CustomField>