force-app/main/default/objects/Cluster_Issue__c/fields/Mute_notifications__c.field-meta.xml
<CustomField>
    <fullName>Mute_notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notifications will not be sent again to Account SE/Owner if checked, until issue priority changes to next higher value</description>
    <inlineHelpText>Notifications will not be sent again to Account SE/Owner if checked, until issue priority changes to next higher value</inlineHelpText>
    <label>Mute notifications?</label>
    <type>Checkbox</type>
</CustomField>