force-app/main/default/objects/Cluster_Issue__c/fields/Next_Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Notification_Date_Time__c</fullName>
    <label>Next Notification Date/Time</label>
    <type>DateTime</type>
</CustomField>