force-app/main/default/objects/Cluster_Issue__c/fields/Owner_First_name__c.field-meta.xml
<CustomField>
    <fullName>Owner_First_name__c</fullName>
    <formula>Owner__r.FirstName</formula>
    <label>Owner First name</label>
    <type>Text</type>
</CustomField>