force-app/main/default/objects/Cluster_Issue__c/fields/Prior_Next_Notification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Prior_Next_Notification_Date_Time__c</fullName>
    <label>Prior Next Notification Date/Time</label>
    <type>DateTime</type>
</CustomField>