force-app/main/default/objects/Cluster_Issue__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
                <label>P1 - High</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <label>P2 - Medium</label>
            </value>
            <value>
                <fullName>P3</fullName>
                <label>P3 - Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>