force-app/main/default/objects/Cluster_Issue__c/fields/Reminder_sent__c.field-meta.xml
<CustomField>
    <fullName>Reminder_sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder sent?</label>
    <type>Checkbox</type>
</CustomField>