force-app/main/default/objects/Cluster_Issue__c/fields/SentryAI_URL__c.field-meta.xml
<CustomField>
    <fullName>SentryAI_URL__c</fullName>
    <description>SentryAI URL on the related Cluster</description>
    <formula>Cluster__r.SentryAI_URL__c</formula>
    <inlineHelpText>SentryAI URL on the related Cluster</inlineHelpText>
    <label>SentryAI URL</label>
    <type>Text</type>
</CustomField>