force-app/main/default/objects/Cluster_Issue__c/recordTypes/Capacity_Failing_Jobs.recordType-meta.xml
<RecordType>
    <fullName>Capacity_Failing_Jobs</fullName>
    <active>true</active>
    <description>Record type corresponding to Capacity or Failing jobs issue for clusters</description>
    <label>Capacity/Failing Jobs</label>
</RecordType>