force-app/main/default/objects/Cluster_Issue__c/recordTypes/Read_Only.recordType-meta.xml
<RecordType>
    <fullName>Read_Only</fullName>
    <active>true</active>
    <description>Issue converted to a Case or an Opportunity i.e. Status changed to Closed</description>
    <label>Read Only</label>
</RecordType>