force-app/main/default/objects/Cluster_Issue__c/validationRules/Additional_Comments_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Additional_Comments_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Status__c) = &apos;Closed&apos;,
TEXT(Close_Reason__c) = &apos;Other&apos;,
Additional_Comments__c = null
)</errorConditionFormula>
    <errorDisplayField>Additional_Comments__c</errorDisplayField>
    <errorMessage>Please provide additional comments on the close reason</errorMessage>
</ValidationRule>