force-app/main/default/objects/Cluster_Issue__c/validationRules/Opportunity_Required_If_Existing_Opp.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Required_If_Existing_Opp</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
TEXT(Close_Reason__c) = &apos;Existing Opportunity&apos;,
ISBLANK(Opportunity__c)
)</errorConditionFormula>
    <errorDisplayField>Opportunity__c</errorDisplayField>
    <errorMessage>Please fill in the existing opportunity</errorMessage>
</ValidationRule>